[metadata]

name = mailblog
version = 0.0.1
description = blog posts from emails
long_description = file: README.md
keywords = blog, email
license = GNU GPL 3
classifiers =
    License :: OSI Approved :: GNU GPL 3
    Programming Language :: Python :: 3
    Topic :: Communications :: Email

[options]

zip_safe = False
include_package_data = True
install_requires =
    mako
    markdown

packages = mailblog, mailblog.templates

[options.package_data]

mailblog.templates = *.html, *.xml

[options.entry_points]

console_scripts =
    mailblog = mailblog.blog:entry_point
    