[metadata]

name = mailblog
version = 0.0.2
description = blog posts from emails
author = Ian Haywood
author_email = ian@haywood.id.au
url = https://github.com/ihaywood3/mailblog
project_urls =
    Bug Tracker = https://github.com/ihaywood3/mailblog/issues
long_description = file: README.md
long_description_content_type = text/markdown
keywords = blog, email
license = GNU GPL 3
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Communications :: Email
    Topic :: Internet :: WWW/HTTP :: Dynamic Content :: News/Diary

[options]

zip_safe = False
include_package_data = True
install_requires =
    mako
    markdown

packages = mailblog, mailblog.templates



[options.entry_points]

console_scripts =
    mailblog = mailblog.blog:entry_point
    